# weiban-tools-web

./: .gitignore  Dockerfile  README.md  Utils.py  docker-compose.yml  main.py  pyproject.toml  wb.py
.github/workflows/: docker-image.yml
static/: index.html
