[tool.poetry]
name = "weiban-tool-master"
version = "0.1.0"
description = ""
authors = ["kalicyh <34980061+kaliCYH@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = ">=2.28.2,<2.29.0"
datetime = ">=5.1,<6.0"
pillow = ">=9.5.0,<9.6.0"
pycryptodomex = "^3.20.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
